--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,6 +66,13 @@ img {
     width: 30px;
     border-style: none;
     border-width: 0;
+    line-height: 0;
+}
+
+.info-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .search-form{
@@ -86,7 +93,8 @@ img {
 
 .info{
   display: flex;
-  gap: 5px;
+  gap: 19px;
+  justify-content: center;
 }
 
 .card-img{
